Update strings and logic of showing tooltip

--- a/app/src/main/res/anim/pulsing_circle.xml
+++ b/app/src/main/res/anim/pulsing_circle.xml
@@ -13,4 +13,10 @@
         android:repeatMode="reverse"
         android:fillAfter="true"
         android:repeatCount="infinite"/>
+    <alpha
+        android:duration="500"
+        android:fromAlpha="0.3"
+        android:toAlpha="1.0"
+        android:repeatMode="reverse"
+        android:repeatCount="infinite"/>
 </set>
