--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -6,54 +6,12 @@
     android:background="?attr/paper_color"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_circle"
-            android:backgroundTint="?attr/multi_select_background_color"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:contentDescription="@null"
-                android:src="@drawable/ic_add_gray_white_24dp"
-                android:tint="?attr/colorAccent" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/suggested_edits_task_action_text_translate"
-                android:textAllCaps="true"
-                android:textColor="?attr/material_theme_primary_color"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/suggested_edits_task_action_text_translate"
-                android:textColor="?attr/material_theme_de_emphasised_color" />
-
-        </LinearLayout>
-    </LinearLayout>
+   <org.wikipedia.views.ImageTitleDescriptionView
+       android:id="@+id/taskImageDetailView"
+       android:layout_marginStart="16dp"
+       android:layout_marginTop="16dp"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
