--- a/app/src/main/res/layout/view_image_title_description.xml
+++ b/app/src/main/res/layout/view_image_title_description.xml
@@ -1,26 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
     android:baselineAligned="false"
     android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/imageBackground"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@drawable/shape_circle"
-        android:backgroundTint="?attr/multi_select_background_color"
-        android:gravity="center">
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:contentDescription="@null"
-            android:src="@drawable/ic_add_gray_white_24dp"
-            android:tint="?attr/colorAccent" />
-    </LinearLayout>
+        <org.wikipedia.views.CircularProgressBar
+            android:id="@+id/circularProgressBar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:visibility="gone"
+            app:progressBackgroundColor="@color/green70"
+            app:progressColor="@color/green30" />
+
+        <LinearLayout
+            android:id="@+id/imageBackground"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape_circle"
+            android:backgroundTint="?attr/multi_select_background_color"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_add_gray_white_24dp"
+                android:tint="?attr/colorAccent" />
+        </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="0dp"
