--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -46,6 +46,7 @@
     <attr name="chip_text_color" format="color"/>
     <attr name="suggestions_background_color" format="color"/>
     <attr name="color_group_52" format="color"/>
+    <attr name="action_mode_green_background" format="color"/>
 
     <declare-styleable name="AutoFitRecyclerView">
         <attr name="minColumnWidth" format="dimension" />
