--- a/app/src/main/res/layout/fragment_suggested_edits_cards.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_cards.xml
@@ -135,6 +135,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/suggested_edits_add_description_button"
+                        android:textSize="14sp"
                         android:fontFamily="sans-serif-medium"
                         android:textAllCaps="true"
                         android:textColor="@color/base100"/>
