--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -6,6 +6,12 @@
     android:background="?attr/main_toolbar_color"
     android:orientation="vertical">
 
+    <org.wikipedia.views.SuggestedEditsDisabledStatesView
+        android:id="@+id/disabledStatesView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,9 +76,9 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/paper_color"
                 android:elevation="4dp"
-                android:padding="16dp"
                 android:fontFamily="sans-serif"
                 android:lineSpacingExtra="6sp"
+                android:padding="16dp"
                 android:text="@string/suggested_edits_encouragement_message"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -83,11 +89,11 @@
         android:layout_width="30dp"
         android:layout_height="15dp"
         android:layout_gravity="end"
-        android:elevation="4dp"
-        android:visibility="gone"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
-        android:background="@drawable/arrow" />
+        android:background="@drawable/arrow"
+        android:elevation="4dp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textViewForMessage"
@@ -104,6 +110,7 @@
         android:layout_width="30dp"
         android:layout_height="15dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:background="@drawable/arrow" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -113,9 +120,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tasksRecyclerView"
-            android:background="?attr/paper_color"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="?attr/paper_color" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
