--- a/app/src/main/res/layout/group_captcha.xml
+++ b/app/src/main/res/layout/group_captcha.xml
@@ -42,8 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            android:background="@null"
             android:contentDescription="@string/captcha_image"
+            app:backgroundImage="?attr/paper_color"
             app:actualImageScaleType="fitCenter" />
 
         <ProgressBar
