--- a/app/src/main/res/layout/view_image_title_description.xml
+++ b/app/src/main/res/layout/view_image_title_description.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginStart="@dimen/suggested_edits_image_title_view_start_margin"
+    android:layout_marginTop="@dimen/suggested_edits_image_title_view_top_margin"
     android:baselineAligned="false"
     android:orientation="horizontal">
 
@@ -14,16 +14,16 @@
 
         <org.wikipedia.views.CircularProgressBar
             android:id="@+id/circularProgressBar"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/suggested_edits_icon_measurement"
+            android:layout_height="@dimen/suggested_edits_icon_measurement"
             android:visibility="gone"
             app:progressBackgroundColor="@color/green90"
             app:progressColor="?attr/action_mode_green_background" />
 
         <LinearLayout
             android:id="@+id/imageBackground"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
+            android:layout_width="@dimen/suggested_edits_icon_background_measurement"
+            android:layout_height="@dimen/suggested_edits_icon_background_measurement"
             android:layout_gravity="center"
             android:background="@drawable/shape_circle"
             android:backgroundTint="?attr/multi_select_background_color"
@@ -31,8 +31,8 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="@dimen/suggested_edits_icon_measurement"
+                android:layout_height="@dimen/suggested_edits_icon_measurement"
                 android:contentDescription="@null"
                 android:src="@drawable/ic_add_gray_white_24dp"
                 android:tint="?attr/colorAccent" />
@@ -42,7 +42,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/suggested_edits_title_margin_start"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -50,10 +50,9 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
             android:text="@string/suggested_edits_task_action_text_translate"
-            android:textAllCaps="true"
             android:textColor="?attr/material_theme_primary_color"
+            android:textSize="@dimen/suggested_edits_icon_title_text_size"
             android:textStyle="bold" />
 
         <TextView
@@ -61,7 +60,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/suggested_edits_task_action_text_translate"
-            android:textColor="?attr/material_theme_de_emphasised_color" />
+            android:textColor="?attr/material_theme_de_emphasised_color"
+            android:textSize="@dimen/suggested_edits_icon_description_text_size" />
 
     </LinearLayout>
 </LinearLayout>
