--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -12,4 +12,16 @@
 
     <dimen name="snackbar_action_inline_max_dimen">0dp</dimen>
 
+<!-- Suggested Edits -->
+    <dimen name="suggested_edits_stats_bottom_margin">28dp</dimen>
+    <dimen name="suggested_edits_image_title_view_start_margin">80dp</dimen>
+    <dimen name="suggested_edits_image_title_view_end_margin">80dp</dimen>
+    <dimen name="suggested_edits_image_title_view_top_margin">37dp</dimen>
+    <dimen name="suggested_edits_icon_measurement">48dp</dimen>
+    <dimen name="suggested_edits_icon_background_measurement">40dp</dimen>
+    <dimen name="suggested_edits_icon_title_text_size">24sp</dimen>
+    <dimen name="suggested_edits_icon_description_text_size">20sp</dimen>
+    <dimen name="suggested_edits_title_margin_start">24dp</dimen>
+    <dimen name="suggested_edits_message_textview_text_size">20sp</dimen>
+
 </resources>
