--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -112,4 +112,16 @@
     <!-- Snackbar -->
     <dimen name="snackbar_action_inline_max_dimen">128dp</dimen>
 
+    <!-- Suggested Edits -->
+    <dimen name="suggested_edits_stats_bottom_margin">16dp</dimen>
+    <dimen name="suggested_edits_image_title_view_start_margin">16dp</dimen>
+    <dimen name="suggested_edits_image_title_view_top_margin">16dp</dimen>
+    <dimen name="suggested_edits_image_title_view_end_margin">16dp</dimen>
+    <dimen name="suggested_edits_icon_measurement">32dp</dimen>
+    <dimen name="suggested_edits_icon_background_measurement">26dp</dimen>
+    <dimen name="suggested_edits_icon_title_text_size">18sp</dimen>
+    <dimen name="suggested_edits_icon_description_text_size">14sp</dimen>
+    <dimen name="suggested_edits_title_margin_start">14dp</dimen>
+    <dimen name="suggested_edits_message_textview_text_size">14sp</dimen>
+
 </resources>
