Differentiate timeout errors from connection errors.
Change-Id: I20048c5334a22edd53283a51eee852026913e60a

--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -31,7 +31,7 @@
             android:layout_marginBottom="@dimen/bottom_toolbar_height"
             android:orientation="vertical" />
 
-        <org.wikipedia.views.WikiPageErrorView
+        <org.wikipedia.views.WikiErrorView
             android:id="@+id/page_error"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
