Follow-up: remove more unnecessary stuff from old Suggested Edits screen.
Change-Id: I5c0f914b63b2bc6284528cf80f848525584fe5d1

--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:attr/windowBackground"
-    android:orientation="vertical"
-    tools:context="org.wikipedia.suggestededits.SuggestedEditsTasksActivity">
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/userContributionsButton"
