--- a/app/src/main/res/values-sw600dp/device_prop.xml
+++ b/app/src/main/res/values-sw600dp/device_prop.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="device_type">Tablet</string>
+    <bool name="isTablet">true</bool>
 </resources>
