--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -3,15 +3,17 @@
     android:id="@+id/taskInfoContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     android:background="?attr/paper_color"
     android:orientation="vertical">
 
-   <org.wikipedia.views.ImageTitleDescriptionView
-       android:id="@+id/taskImageDetailView"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"/>
+    <org.wikipedia.views.ImageTitleDescriptionView
+        android:id="@+id/taskImageDetailView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:id="@+id/actionLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
