--- a/app/src/main/res/values/device_prop.xml
+++ b/app/src/main/res/values/device_prop.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="device_type">Phone</string>
+    <bool name="isTablet">false</bool>
 </resources>
