--- a/app/src/main/res/layout/view_image_title_description.xml
+++ b/app/src/main/res/layout/view_image_title_description.xml
@@ -55,6 +55,7 @@
             android:layout_height="wrap_content"
             android:text="@string/suggested_edits_task_action_text_translate"
             android:layout_marginBottom="8dp"
+            android:textSize="@dimen/suggested_edits_icon_title_text_size"
             android:textColor="?attr/material_theme_primary_color"
             android:textStyle="bold" />
 
@@ -63,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/suggested_edits_task_action_text_translate"
+            android:textSize="@dimen/suggested_edits_message_textview_text_size"
             android:textColor="?attr/material_theme_de_emphasised_color"/>
 
     </LinearLayout>
