--- a/app/src/main/res/xml/developer_preferences.xml
+++ b/app/src/main/res/xml/developer_preferences.xml
@@ -51,7 +51,7 @@
             android:key="@string/preference_key_restbase_uri_format"
             android:title="@string/preference_key_restbase_uri_format"
             android:dialogMessage="Prod: %1$s://%2$s/api/rest_v1/
-            \nLabs: http://mobileapps.wmflabs.org/%2$s/v1/
+            \nLabs: https://mobileapps.wmflabs.org/%2$s/v1/
             \nDev: http://host:6927/%2$s/v1/
             \n%1$s &#10139; protocol (https if omitted)
             \n%2$s &#10139; WP host" />
