--- a/app/src/main/res/values/styles_dark.xml
+++ b/app/src/main/res/values/styles_dark.xml
@@ -81,6 +81,7 @@
         <item name="paper_color">@color/base14</item>
         <item name="suggestions_background_color">@color/base12</item>
         <item name="color_group_52">@color/accent75</item>
+        <item name="lighter_green_background">@color/green90</item>
 
     </style>
 
